feat: add changing backgrounds depending on time and slider buttons

--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,16 @@
   padding: 0;
 }
 
-body {
+.body {
   min-width: 480px;
   min-height: 100vh;
   font-family: 'Arial', sans-serif;
   font-size: 16px;
   color: #fff;
   text-align: center;
-  background: url("../assets/img/bg.jpg") center/cover, rgba(0, 0, 0, 0.5);
+  background: url("") center/cover, rgba(0, 0, 0, 0.5);
   background-blend-mode: multiply;
-  transition: background-image 1s ease-in-out;
+  transition: background-image 0.5s ease-in-out;
 }
 
 .header {
