--- a/css/style.css
+++ b/css/style.css
@@ -133,12 +133,23 @@
   margin-top: -10px;
 }
 
+.weather-indicators {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .description-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
-  column-gap: 12px;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.weather-description::first-letter {
+  text-transform:capitalize;
 }
 
 .weather-icon {
@@ -146,7 +157,7 @@
 }
 
 .city {
-  width: 170px;
+  width: 100%;
   height: 34px;
   padding: 5px;
   font-size: 20px;
