--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,45 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 120px;
+  width: 150px;
   margin-bottom: 28px;
 }
 
 .play-list {
   text-align: left;
+  height: 100px;
+  overflow: auto;
+  list-style: none;
+}
+
+.play-list::-webkit-scrollbar {
+  width: 10px;
+  
+}
+
+.play-list::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 5px;
+  opacity: 0.5;
+}
+
+.play-list::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 5px;
+}
+
+.play-list__item {
+  padding: 0.5rem 0px;
+}
+
+.play-list__item::before {
+  content: "";
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.5rem;
+  background-image: url("../assets/svg/music_note_FILL0_wght400_GRAD0_opsz48.svg");
+  background-size: cover;
 }
 
 .play-item {
