--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @font-face {
   font-family: 'Arial-MT';
-  src: url("../assets/fonts/Arial-MT.woff"); /* Путь к файлу со шрифтом */
- }
+  src: url("../assets/fonts/Arial-MT.woff");
+  /* Путь к файлу со шрифтом */
+}
 
 * {
   box-sizing: border-box;
@@ -27,7 +28,7 @@
   align-items: flex-start;
   width: 100%;
   height: 30vh;
-  min-height: 220px;  
+  min-height: 220px;
   padding: 20px;
 }
 
@@ -35,7 +36,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 150px;
+  width: 200px;
   margin-bottom: 28px;
 }
 
@@ -48,13 +49,11 @@
 
 .play-list::-webkit-scrollbar {
   width: 10px;
-  
 }
 
 .play-list::-webkit-scrollbar-track {
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 5px;
-  opacity: 0.5;
 }
 
 .play-list::-webkit-scrollbar-thumb {
@@ -64,6 +63,17 @@
 
 .play-list__item {
   padding: 0.5rem 0px;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.play-list__item:hover {
+  opacity: 1;
+}
+
+.play-list__item_active {
+  opacity: 1;
 }
 
 .play-list__item::before {
@@ -86,18 +96,6 @@
   transition: .3s;
 }
 
-.play-item:hover {
-  opacity: 1;
-}
-
-.play-item::before {
-  content: "\2713";  
-  position: absolute;
-  left: 0;
-  top: 2px;
-  font-weight: 900;
-}
-
 .item-active::before {
   color: #C5B358;
 }
@@ -115,7 +113,7 @@
   outline: 0;
   opacity: .8;
   cursor: pointer;
-  transition: .3s;  
+  transition: .3s;
 }
 
 .player-icon:hover,
@@ -127,7 +125,7 @@
 .player-icon:active,
 .slider-icon:active {
   border: 0;
-  outline: 0;  
+  outline: 0;
   transform: scale(1.1);
 }
 
@@ -157,7 +155,7 @@
   align-items: flex-start;
   row-gap: 5px;
   width: 180px;
-  min-height: 180px;  
+  min-height: 180px;
   text-align: left;
 }
 
@@ -181,7 +179,7 @@
 }
 
 .weather-description::first-letter {
-  text-transform:capitalize;
+  text-transform: capitalize;
 }
 
 .weather-icon {
@@ -194,14 +192,14 @@
   padding: 5px;
   font-size: 20px;
   line-height: 24px;
-  color: #fff;  
+  color: #fff;
   border: 0;
   outline: 0;
   border-bottom: 1px solid #fff;
   background-color: transparent;
 }
 
-.city::placeholder {  
+.city::placeholder {
   font-size: 20px;
   color: #fff;
   opacity: .6;
@@ -215,7 +213,7 @@
   align-items: center;
   width: 100%;
   height: 40vh;
-  min-height: 260px;  
+  min-height: 260px;
   padding: 20px;
 }
 
@@ -241,7 +239,7 @@
   margin-bottom: 10px;
   font-family: 'Arial-MT';
   font-size: 100px;
-  letter-spacing: -4px;  
+  letter-spacing: -4px;
 }
 
 .date {
@@ -261,7 +259,7 @@
 }
 
 .greeting {
-  flex: 1;  
+  flex: 1;
   padding: 10px;
   text-align: right;
 }
@@ -290,18 +288,18 @@
   align-items: center;
   width: 100%;
   height: 30vh;
-  min-height: 160px;  
+  min-height: 160px;
   padding: 20px;
 }
 
 .change-quote {
   margin-bottom: 30px;
-  background-image: url("../assets/svg/reload.svg");  
+  background-image: url("../assets/svg/reload.svg");
 }
 
 .change-quote:active {
   border: 0;
-  outline: 0;  
+  outline: 0;
   transform: scale(1.1) rotate(0.5turn);
 }
 
@@ -319,12 +317,12 @@
 
 .footer-items {
   width: 100%;
-  list-style-type: none; 
+  list-style-type: none;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  
+
 }
 
 .footer__item {
@@ -345,7 +343,7 @@
 @media (max-width: 768px) {
   .time {
     min-height: 80px;
-    font-size: 72px;    
+    font-size: 72px;
   }
 
   .greeting-container {
