--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,87 @@
   padding: 20px;
 }
 
+.player {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .player-controls {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 200px;
-  margin-bottom: 28px;
+  width: 100%;
+}
+
+.volume-controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+}
+
+.volume-slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 10px; 
+  background-color:#fff;
+  opacity: 0.5; 
+  outline: none;
+  border-radius: 5px; 
+  transition: opacity .2s;
+}
+
+.volume-slider:hover {
+  opacity: 0.7;
+}
+
+.volume-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 25px;
+  border-radius: 5px;
+  background: #8a8a8a;
+  cursor: pointer;
+}
+
+.unmute {
+  background-image: url("../assets/svg/volume_up_FILL0_wght400_GRAD0_opsz48.svg");
+}
+
+.mute {
+  background-image: url("../assets/svg/volume_off_FILL0_wght400_GRAD0_opsz48.svg");
+}
+
+.song-title {
+  height: 1.2rem;
+}
+
+.progress {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 180px;
+  height: 10px;
+  cursor: pointer;
+  opacity: 0.7;
+  background-color: #acacac;
+  -webkit-transition: 0.3s;
+  transition: opacity 0.3s;
+}
+
+.progress-bar {
+  position: relative;
+  background-color: #fff;
+  height: 100%;
+  width: 0%;
+}
+
+.time-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .play-list {
@@ -74,6 +149,16 @@
 
 .play-list__item_active {
   opacity: 1;
+}
+
+.play-list__item.play-list__item_active::before {
+  content: "";
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.5rem;
+  background-image: url("../assets/svg/play.svg");
+  background-size: cover;
 }
 
 .play-list__item::before {
