--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,11 @@
   -webkit-appearance: none;
   appearance: none;
   width: 100%;
-  height: 10px; 
-  background-color:#fff;
-  opacity: 0.5; 
+  height: 10px;
+  background-color: #fff;
+  opacity: 0.5;
   outline: none;
-  border-radius: 5px; 
+  border-radius: 5px;
   transition: opacity .2s;
 }
 
@@ -439,12 +439,12 @@
   z-index: 2;
   -webkit-appearance: none;
   appearance: none;
-  width: 70px;
-  height: 30px; 
-  background-color:#fff;
-  opacity: 0.3; 
+  width: 60px;
+  height: 30px;
+  background-color: #fff;
+  opacity: 0.3;
   outline: none;
-  border-radius: 10px; 
+  border-radius: 10px;
   transition: opacity .2s;
   cursor: pointer;
 }
@@ -465,13 +465,52 @@
 
 .en {
   position: relative;
-  left:25px;
+  left: 25px;
 }
 
 .ru {
   position: relative;
   right: 25px;
 }
+
+.image-src {
+  padding: 0 5px;
+  height: 30px;
+  border: 0;
+  font-size: 1rem;
+  border-radius: 10px;
+  box-sizing: border-box;
+  outline: none;
+  background-color: #8a8a8a;
+  color: #FFF;
+  opacity: 0.7;
+  transition: opacity .2s;
+}
+
+.image-src:hover,
+.image-src:active {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.image-tag {
+  font-size: 1rem;
+  height: 30px;
+  padding: 0 5px;
+  border: 0;
+  border-radius: 10px;
+  box-sizing: border-box;
+  outline: none;
+  background-color: #8a8a8a;
+  color: #FFF;
+  opacity: 0.7;
+  transition: opacity .2s;
+}
+
+.image-tag:hover,
+.image-tag:active {
+  opacity: 1;
+} 
 
 @media (max-width: 768px) {
   .time {
