--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  -webkit-transition: 0.5s; 
+  -webkit-transition: 0.5s;
   transition: all 0.5s;
 }
 
@@ -124,16 +124,19 @@
   list-style: none;
 }
 
-.play-list::-webkit-scrollbar {
+.play-list::-webkit-scrollbar,
+.to-do__container::-webkit-scrollbar {
   width: 10px;
 }
 
-.play-list::-webkit-scrollbar-track {
+.play-list::-webkit-scrollbar-track,
+.to-do__container::-webkit-scrollbar-track {
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 5px;
 }
 
-.play-list::-webkit-scrollbar-thumb {
+.play-list::-webkit-scrollbar-thumb,
+.to-do__container::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 5px;
 }
@@ -190,7 +193,9 @@
 .player-icon,
 .slider-icon,
 .change-quote,
-.settings-button {
+.settings-button,
+.to-do-btn,
+.to-do-item__del {
   width: 32px;
   height: 32px;
   background-size: 32px 32px;
@@ -247,7 +252,7 @@
   width: 180px;
   min-height: 180px;
   text-align: left;
-  -webkit-transition: 0.5s; 
+  -webkit-transition: 0.5s;
   transition: all 0.5s;
 }
 
@@ -332,7 +337,7 @@
   font-family: 'Arial-MT';
   font-size: 100px;
   letter-spacing: -4px;
-  -webkit-transition: 0.5s; 
+  -webkit-transition: 0.5s;
   transition: all 0.5s;
 }
 
@@ -340,7 +345,7 @@
   min-height: 28px;
   font-size: 24px;
   margin-bottom: 20px;
-  -webkit-transition: 0.5s; 
+  -webkit-transition: 0.5s;
   transition: all 0.5s;
 }
 
@@ -356,7 +361,7 @@
   min-height: 48px;
   width: 100vw;
   font-size: 40px;
-  -webkit-transition: 0.5s; 
+  -webkit-transition: 0.5s;
   transition: all 0.5s;
 }
 
@@ -407,7 +412,7 @@
 
 .quote-container {
   margin-bottom: 30px;
-  -webkit-transition: 0.5s; 
+  -webkit-transition: 0.5s;
   transition: all 0.5s;
 }
 
@@ -473,6 +478,7 @@
 .settings_inactive {
   left: -330px;
 }
+
 .settings_inactive .image-tag {
   opacity: 0;
   visibility: hidden;
@@ -542,12 +548,12 @@
 .image-tag:hover,
 .image-tag:active {
   opacity: 1;
-} 
+}
 
 .switch {
-  position:relative;
+  position: relative;
   display: inline-block;
-  cursor:pointer;
+  cursor: pointer;
   width: 66px;
   height: 30px;
 }
@@ -613,19 +619,19 @@
   transition: .4s;
 }
 
-.switch__input:checked + .switch__slider:before {
+.switch__input:checked+.switch__slider:before {
   -webkit-transform: translateX(36px);
   -ms-transform: translateX(36px);
   transform: translateX(36px);
 }
 
-.switch__input:checked ~ .langs__labels::after,
-.switch__input:checked ~ .options__labels::after{
+.switch__input:checked~.langs__labels::after,
+.switch__input:checked~.options__labels::after {
   opacity: 1;
 }
 
-.switch__input:checked ~ .langs__labels::before,
-.switch__input:checked ~ .options__labels::before {
+.switch__input:checked~.langs__labels::before,
+.switch__input:checked~.options__labels::before {
   opacity: 0.7;
 }
 
@@ -645,6 +651,131 @@
   color: #fff;
   opacity: 1;
   transition: all 0.4s ease-in-out;
+}
+
+.to-do {
+  width: 100%;
+}
+
+.to-do-btn {
+  position: relative;
+  margin-top: 10px;;
+  top:0px;
+  transition: all 0.5s;
+  background-image: url(../assets/svg/bottom_panel_open_FILL0_wght400_GRAD0_opsz48.svg);
+}
+
+.to-do-btn.top_inactive {
+  background-image: url(../assets/svg/receipt_long_FILL0_wght400_GRAD0_opsz48.svg);
+}
+
+.to-do__container {
+  width: 100%;
+  height: 20vh;
+  max-width: 500px;
+  position: relative;
+  top:0px;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 0.5vh;
+  overflow-y: auto;
+  transition: all 0.5s;
+}
+
+.top_inactive {
+  top: -23vh;
+}
+
+.to-do__title {
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 10px;
+}
+
+.to-do__form {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.to-do__input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #8a8a8a;
+  color:#FFF;
+  border: none;
+  opacity: 0.5;
+  transition: opacity 0.5s;
+}
+
+.to-do__input::placeholder,
+.image-tag::placeholder {
+  color: #fff;
+}
+
+.to-do__input:focus {
+  opacity: 0.8;
+}
+
+textarea:focus, input:focus{
+  outline: none;
+}
+
+.to-do__item {
+  margin-bottom: 10px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  opacity: 0.5;
+  transition: opacity 0.3s;
+}
+
+.to-do__item:hover {
+  opacity: 0.9;
+}
+
+.to-do-item__text {
+  flex-grow: 1;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 16px;
+  text-align: start;
+}
+
+.done .to-do-item__text {
+  text-decoration: line-through;
+}
+
+.to-do__checkbox {
+  display:none;
+}
+
+.to-do-item__tick {
+  width: 20px;
+  height: 20px;
+  border: 3px solid #FFF;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.to-do-item__tick::before {
+  content: '✓';
+  font-size: 10px;
+  display: none;
+}
+
+ .done .to-do-item__tick::before {
+  display: inline-block;
+}
+
+.to-do-item__del {
+  background-image: url(../assets/svg/delete_FILL0_wght400_GRAD0_opsz48.svg);
 }
 
 @media (max-width: 768px) {
